syntax = "proto3";

import "spiderrock_common.proto";


package spiderrock.protobuf;

import "google/protobuf/timestamp.proto";

    
message SOQConstituentSymbolMap {
    message PKey {
        
        TickerKey ticker = 10; // Underlying symbol
        OptionKey okey = 11; // Constituent symbol
        string soq_identifier = 12; // SOQ dissemination symbol
    }


    MessageMetadata _meta = 1;
    
    PKey pkey = 2;
    SOQSymbolCondition sym_cond = 100; // Condition code for constituent symbol
    int64 src_timestamp = 103; // exchange high precision timestamp (if available)
    int64 net_timestamp = 106; // inbound packet PTP timestamp from SR gateway switch;usually syncronized with f
    google.protobuf.Timestamp timestamp = 109;
}


